...
        IconButton(
            onClick = {
                if(selectedIndex > 0) {
                    onIndexChanged(selectedIndex - 1)
                }
            },
            modifier = Modifier.testTag("carousel_prev")
        ){
            Icon(
                imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                contentDescription = "Previous colour"
            )
        }
...
        IconButton(
            onClick = {
                if (selectedIndex < circleCount - 1) {
                    onIndexChanged(selectedIndex + 1)
                }
            },
            modifier = Modifier.testTag("carousel_next")
        ){
            Icon(
                imageVector = Icons.AutoMirrored.Filled.ArrowForward,
                contentDescription = "Next colour"
            )
        }
...
