...

        Column(
            modifier = modifier
                .padding(horizontal = 20.dp)
                .padding(innerPadding)
                .fillMaxSize()
                .testTag("login_screen"),
            verticalArrangement = Arrangement.Top,
            horizontalAlignment = Alignment.CenterHorizontally
        ) {

            Spacer(modifier = Modifier.height(140.dp))

...
    MyFilledButton(
        onClick = onClick,
        text = stringResource(R.string.register),
        modifier = Modifier
            .fillMaxWidth(fraction=0.5f)
            .padding(top = 20.dp)
            .testTag("register_button")
    )
}

// Forgot password? button
@Composable
fun ForgotPasswordButton(onClick: () -> Unit){
...
