...
}

@Composable
fun ContinueButton(modifier: Modifier = Modifier, onClick: () -> Unit){
    MyElevatedButton(
        modifier = modifier
            .testTag("delete_account_confirm_button"),
        text = "Continue",
        onClick = onClick
    )
}

@Preview(showBackground = true)
...
