...
                Spacer(modifier = Modifier.height(20.dp))

                CustomOutlinedButton(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = 16.dp, vertical = 8.dp)
                        .testTag("drawer_settings_button"),
                    text = stringResource(R.string.settings),
                    onClick = { onDestinationClicked("settings") }
                )

                Spacer(modifier = Modifier.height(20.dp))

...
