...
fun DeleteAccountNavButton(onClick: () -> Unit){
    MyFilledTonalButton(
        onClick = onClick,
        text = "Delete Account",
        modifier = Modifier
            .padding(top = 20.dp)
            .testTag("delete_account_button")
            .height(60.dp)
            .fillMaxWidth(),
        containerColor = MaterialTheme.colorScheme.errorContainer,
        contentColor = MaterialTheme.colorScheme.onErrorContainer
    )
}
...
